flux/apps/josa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kube
  labels:
    app: hello-kube
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hello-kube
